--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: Nullblock Documentation
 description: Comprehensive documentation for Nullblock - Advanced Web3 Trading & Agentic Systems
-baseurl: "/docs"
+baseurl: "/nullblock/docs"
 url: "https://aetherbytes.github.io"
 
 # Build settings
