--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,40 @@
 # Nullblock Development Environment
-ETHEREUM_RPC_URL=https://eth-sepolia.alchemyapi.io/v2/your-key
+# Backend Service URLs
+VITE_FAST_API_BACKEND_URL=http://localhost:5000
+VITE_MCP_API_URL=http://localhost:8001
+VITE_ORCHESTRATION_API_URL=http://localhost:8002
+VITE_AGENTS_API_URL=http://localhost:8003
+VITE_EREBUS_API_URL=http://localhost:3000
+
+# Development API Keys (replace with your actual keys)
+ETHEREUM_RPC_URL="https://eth-sepolia.alchemyapi.io/v2/your-key-here"
+FLASHBOTS_PRIVATE_KEY=your-flashbots-key-here
+IPFS_API_URL=http://localhost:5001
+
+# Database URLs
+DATABASE_URL=postgresql://localhost:5432/nullblock_dev
+REDIS_URL=redis://localhost:6379
+
+# Twitter/X API (for social trading)
+TWITTER_BEARER_TOKEN=your-twitter-bearer-token
+DEXTOOLS_API_KEY=your-dextools-api-key
+
+# MCP Configuration
+MCP_SERVER_HOST=0.0.0.0
+MCP_SERVER_PORT=8001
+
+# Orchestration Configuration  
+ORCHESTRATION_HOST=0.0.0.0
+ORCHESTRATION_PORT=8002
+
+# Agents Configuration
+AGENTS_HOST=0.0.0.0
+AGENTS_PORT=8003
+
+# Legacy Helios Configuration
+HELIOS_HOST=0.0.0.0
+HELIOS_PORT=5000
+
+# Erebus Configuration
+EREBUS_HOST=127.0.0.1
+EREBUS_PORT=3000
