--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aetherBytes/beerus",
+  "name": "@aetherBytes/nullblock",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
