--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -14,3 +14,7 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0"
 borsh = "1.5.5"
 borsh-derive = "1.5.5"
+uuid = { version = "1.10", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+bincode = "1.3"
+reqwest = { version = "0.12", features = ["json"] }
