--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -18,3 +18,5 @@ uuid = { version = "1.10", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 bincode = "1.3"
 reqwest = { version = "0.12", features = ["json"] }
+tower-http = { version = "0.5", features = ["cors"] }
+tower = "0.4"
