--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -20,3 +20,12 @@ bincode = "1.3"
 reqwest = { version = "0.12", features = ["json"] }
 tower-http = { version = "0.5", features = ["cors"] }
 tower = "0.4"
+actix-web = "4.5"
+url = "2.5"
+
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "performance_benchmarks"
+harness = false
