--- a/svc/nullblock-agents/pyproject.toml
+++ b/svc/nullblock-agents/pyproject.toml
@@ -25,7 +25,10 @@ dependencies = [
     "python-json-logger>=3.2.1",
     "ccxt>=4.0.0",
     "scipy>=1.11.0",
-    "scikit-learn>=1.3.0"
+    "scikit-learn>=1.3.0",
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "httpx>=0.25.0"
 ]
 
 [tool.hatch.build.targets.wheel]
