add local llm logic. Demo test updated. LM studio expected as one of the default options for local llm. WORKING

--- a/.env.dev
+++ b/.env.dev
@@ -6,7 +6,7 @@ VITE_ORCHESTRATION_API_URL=http://localhost:8002
 VITE_AGENTS_API_URL=http://localhost:8003
 VITE_EREBUS_API_URL=http://localhost:3000
 
-# Development API Keys (replace with your actual keys)
+# Development API Keys - update with your actual keys
 ETHEREUM_RPC_URL="https://eth-sepolia.alchemyapi.io/v2/your-key-here"
 FLASHBOTS_PRIVATE_KEY=your-flashbots-key-here
 IPFS_API_URL=http://localhost:5001
@@ -15,7 +15,7 @@ IPFS_API_URL=http://localhost:5001
 DATABASE_URL=postgresql://localhost:5432/nullblock_dev
 REDIS_URL=redis://localhost:6379
 
-# Twitter/X API (for social trading)
+# Twitter API for social trading
 TWITTER_BEARER_TOKEN=your-twitter-bearer-token
 DEXTOOLS_API_KEY=your-dextools-api-key
 
