--- a/svc/nullblock-agents/pyproject.toml
+++ b/svc/nullblock-agents/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
-    "httpx>=0.25.0"
+    "httpx>=0.25.0",
+    "psutil>=5.9.0"
 ]
 
 [tool.hatch.build.targets.wheel]
