--- a/scripts/nullblock-dev.yml
+++ b/scripts/nullblock-dev.yml
@@ -110,201 +110,8 @@ windows:
   - logs:
       layout: even-horizontal
       panes:
-        - |
-          echo "📊 MASTER LOGS - All Services Combined"
-          echo "🎯 Monitoring all service logs in real-time"
-          echo "💡 Press Ctrl+C to stop monitoring"
-          echo "=" * 80
-          echo ""
-          echo "📋 Available log files:"
-          ls -la logs/ | grep -E "\\.log$" || echo "  No log files found yet"
-          echo ""
-          echo "🔄 Starting unified log stream..."
-          echo "=" * 80
-          tail -f logs/*.log
-                              - |
-                        echo "📈 COMPREHENSIVE HEALTH MONITORING"
-                        echo "🔍 Real-time service status and log analysis"
-                        echo "=" * 80
-                        echo ""
-                        
-                        # Function to check if a service is running
-                        check_service() {
-                          local name="$1"
-                          local port="$2"
-                          local url="$3"
-                          local check_type="$4"
-                          
-                          if [ "$check_type" = "port" ]; then
-                            if lsof -i :$port > /dev/null 2>&1; then
-                              echo "✅"
-                            else
-                              echo "❌"
-                            fi
-                          elif [ "$check_type" = "http" ]; then
-                            if curl -s --max-time 3 "$url" > /dev/null 2>&1; then
-                              echo "✅"
-                            else
-                              echo "❌"
-                            fi
-                          elif [ "$check_type" = "brew" ]; then
-                            if brew services list | grep -q "$name.*started"; then
-                              echo "✅"
-                            else
-                              echo "❌"
-                            fi
-                          else
-                            echo "❓"
-                          fi
-                        }
-                        
-                        # Function to print status table
-                        print_status_table() {
-                          local timestamp=$(date '+%Y-%m-%d %H:%M:%S')
-                          echo "🕐 $timestamp - COMPREHENSIVE SERVICE STATUS"
-                          echo "=" * 80
-                          echo ""
-                          printf "%-25s %-15s %-10s %-15s %s\n" "SERVICE" "PORT/CHECK" "STATUS" "RESPONSE TIME" "DETAILS"
-                          printf "%-25s %-15s %-10s %-15s %s\n" "-------" "----------" "------" "-------------" "-------"
-                          
-                          # Infrastructure Services
-                          postgres_status=$(check_service "postgresql@17" "" "" "brew")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "PostgreSQL" "brew service" "$postgres_status" "-" "Database"
-                          
-                          redis_status=$(check_service "redis" "" "" "brew")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "Redis" "brew service" "$redis_status" "-" "Cache"
-                          
-                          # Check if IPFS is running
-                          if pgrep -f "ipfs daemon" > /dev/null; then
-                            ipfs_status="✅"
-                          else
-                            ipfs_status="❌"
-                          fi
-                          printf "%-25s %-15s %-10s %-15s %s\n" "IPFS Daemon" "process" "$ipfs_status" "-" "File System"
-                          
-                          # Backend Services
-                          mcp_status=$(check_service "MCP" "8001" "http://localhost:8001/health" "http")
-                          mcp_time=$(curl -s --max-time 3 -w "%{time_total}" http://localhost:8001/health -o /dev/null 2>/dev/null || echo "N/A")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "MCP Server" "8001" "$mcp_status" "${mcp_time}s" "Protocol Server"
-                          
-                          orch_status=$(check_service "Orchestration" "8002" "http://localhost:8002/health" "http")
-                          orch_time=$(curl -s --max-time 3 -w "%{time_total}" http://localhost:8002/health -o /dev/null 2>/dev/null || echo "N/A")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "Orchestration" "8002" "$orch_status" "${orch_time}s" "Workflow Engine"
-                          
-                          erebus_status=$(check_service "Erebus" "3000" "http://localhost:3000/health" "http")
-                          erebus_time=$(curl -s --max-time 3 -w "%{time_total}" http://localhost:3000/health -o /dev/null 2>/dev/null || echo "N/A")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "Erebus" "3000" "$erebus_status" "${erebus_time}s" "Rust Backend"
-                          
-                          # Agent Services
-                          agents_status=$(check_service "General Agents" "9001" "http://localhost:9001/health" "http")
-                          agents_time=$(curl -s --max-time 3 -w "%{time_total}" http://localhost:9001/health -o /dev/null 2>/dev/null || echo "N/A")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "General Agents" "9001" "$agents_status" "${agents_time}s" "Agent Services"
-                          
-                          hecate_status=$(check_service "Hecate Agent" "9002" "http://localhost:9002/health" "http")
-                          hecate_time=$(curl -s --max-time 3 -w "%{time_total}" http://localhost:9002/health -o /dev/null 2>/dev/null || echo "N/A")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "Hecate Agent" "9002" "$hecate_status" "${hecate_time}s" "Chat Interface"
-                          
-                          # Frontend Services
-                          frontend_status=$(check_service "Frontend" "5173" "http://localhost:5173" "http")
-                          frontend_time=$(curl -s --max-time 3 -w "%{time_total}" http://localhost:5173 -o /dev/null 2>/dev/null || echo "N/A")
-                          printf "%-25s %-15s %-10s %-15s %s\n" "Frontend" "5173" "$frontend_status" "${frontend_time}s" "Vite Dev Server"
-                          
-                          # LM Studio
-                          if lsof -i :1234 > /dev/null 2>&1; then
-                            lm_status="✅"
-                            lm_time="N/A"
-                          else
-                            lm_status="❌"
-                            lm_time="N/A"
-                          fi
-                          printf "%-25s %-15s %-10s %-15s %s\n" "LM Studio" "1234" "$lm_status" "$lm_time" "LLM Server"
-                          
-                          echo ""
-                          echo "=" * 80
-                          
-                          # Count online/offline services
-                          total_services=9
-                          online_services=$(printf "%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s" "$postgres_status" "$redis_status" "$ipfs_status" "$mcp_status" "$orch_status" "$erebus_status" "$agents_status" "$hecate_status" "$frontend_status" | grep -c "✅")
-                          offline_services=$((total_services - online_services))
-                          
-                          echo "📊 SUMMARY: $online_services/$total_services services online ($offline_services offline)"
-                          
-                          if [ $offline_services -eq 0 ]; then
-                            echo "🎉 ALL SERVICES ARE ONLINE! 🎉"
-                          else
-                            echo "⚠️  $offline_services service(s) still offline"
-                          fi
-                          
-                          echo ""
-                        }
-                        
-                        # Function to show log statistics
-                        show_log_stats() {
-                          echo "📋 LOG FILE STATISTICS:"
-                          echo "----------------------"
-                          if [ -d logs ]; then
-                            for logfile in logs/*.log; do
-                              if [ -f "$logfile" ]; then
-                                size=$(du -h "$logfile" | cut -f1)
-                                lines=$(wc -l < "$logfile" 2>/dev/null || echo "0")
-                                last_modified=$(stat -f "%Sm" -t "%H:%M:%S" "$logfile" 2>/dev/null || echo "N/A")
-                                echo "  📄 $(basename "$logfile"): $size ($lines lines) - Last: $last_modified"
-                              fi
-                            done
-                          else
-                            echo "  📁 No logs directory found"
-                          fi
-                          echo ""
-                        }
-                        
-                        # Function to show system resources
-                        show_system_resources() {
-                          echo "💻 SYSTEM RESOURCES:"
-                          echo "-------------------"
-                          cpu_usage=$(top -l 1 | grep "CPU usage" | awk '{print $3}' | sed 's/%//')
-                          memory_info=$(vm_stat | grep "Pages free" | awk '{print $3}' | sed 's/\.//')
-                          memory_mb=$((memory_info * 4096 / 1024 / 1024))
-                          disk_usage=$(df -h . | tail -1 | awk '{print $5}')
-                          echo "  🖥️  CPU Usage: ${cpu_usage}%"
-                          echo "  💾 Memory Free: ${memory_mb}MB"
-                          echo "  💿 Disk Usage: $disk_usage"
-                          echo ""
-                        }
-                        
-                        # Initial status check
-                        print_status_table
-                        show_log_stats
-                        show_system_resources
-                        
-                        # Continuous monitoring
-                        check_count=0
-                        while true; do
-                          check_count=$((check_count + 1))
-                          
-                          # Check every 15 seconds until all services are online
-                          if [ $check_count -le 40 ]; then  # 40 checks = 10 minutes
-                            sleep 15
-                            clear
-                            echo "📈 COMPREHENSIVE HEALTH MONITORING"
-                            echo "🔍 Real-time service status and log analysis"
-                            echo "=" * 80
-                            echo ""
-                            print_status_table
-                            show_log_stats
-                            show_system_resources
-                          else
-                            # After 10 minutes, switch to 5-minute intervals
-                            sleep 300  # 5 minutes
-                            clear
-                            echo "📈 COMPREHENSIVE HEALTH MONITORING"
-                            echo "🔍 Real-time service status and log analysis"
-                            echo "=" * 80
-                            echo ""
-                            print_status_table
-                            show_log_stats
-                            show_system_resources
-                          fi
-                        done
+        - ~/nullblock/scripts/unified-logs.sh
+        - ~/nullblock/scripts/health-monitor.sh
 
   - workspace:
       layout: even-horizontal
