--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
 # Logs
 *.log
+*.log.*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
+# Log directories
+logs/
+svc/nullblock-agents/logs/
+svc/nullblock-mcp/logs/
+svc/nullblock-orchestration/logs/
+svc/erebus/logs/
+svc/hecate/logs/
 
 .amplify-hosting
 node_modules
