--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -3,32 +3,13 @@ name = "erebus"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-axum = "0.8.1"
-tokio = { version = "1.43.0", features = ["full"] }
-solana-client = "2.2.0"
-solana-sdk = "2.2.1"
-serde = { version = "1.0.218", features = ["derive"] }
+axum = "0.7"
+tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-borsh = "1.5.5"
-borsh-derive = "1.5.5"
-uuid = { version = "1.10", features = ["v4"] }
-chrono = { version = "0.4", features = ["serde"] }
-bincode = "1.3"
-reqwest = { version = "0.12", features = ["json"] }
-tower-http = { version = "0.5", features = ["cors"] }
 tower = "0.4"
-actix-web = "4.5"
-url = "2.5"
+tower-http = { version = "0.5", features = ["cors"] }
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tracing-appender = "0.2"
-
-[dev-dependencies]
-criterion = "0.5"
-
-[[bench]]
-name = "performance_benchmarks"
-harness = false
+tracing-subscriber = "0.3"
+chrono = { version = "0.4", features = ["serde"] }
