--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -11,6 +11,8 @@ serde_json = "1.0"
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
+tracing-appender = "0.2"
+uuid = { version = "1.0", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json"] }
